--- a/css/styles.css
+++ b/css/styles.css
@@ -619,7 +619,7 @@ img {
 /*section customers*/
 
 .customers{
-    padding-top: 120px;
+    /* padding-top: 120px; */
     padding-bottom: 120px;
 }
 
@@ -638,18 +638,46 @@ img {
 
 .customers-list{
     display: flex;
-    align-items: center;
-    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 
+@media only screen and (max-width: 767px) {
+   .customers-list{   
+     row-gap: 72px;
+     column-gap: 16px;
+    
+  }
+}
+
+ @media only screen and (min-width: 768px) {
+   .customers-list{
+    column-gap: 24px;
+    row-gap: 72px;   
+      
+  }
+} 
+
+@media only screen and (min-width: 1158px) {
+   .customers-list{
+    gap: 24px;
+       
+  }
+}
+
+
+
 .customers-item{
-    width: calc((100% - 120px) / 6);
-    height: 88px;
+    
+   
+    /* width: calc((100% - 120px) / 6);
+    height: 88px; */
 }
 
 .customers-link{
-    width: 100%;
-    height: 100%;
+    width: 168px;
+    height: 88px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     display: flex;
@@ -838,29 +866,7 @@ transform: translateY(0%);
 
 }
 
-/*foo
-.overlay-container:hover .overlay{
-    transform: scaleY(0);
-}
 
-.overlay{
-    background-color: #4D5AE5;
-    padding: 8px;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transorm 350ms ease-in-out;
-}
-
-.overlay-text{
-    font-size: 16px;
-    font-family: Roboto;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-    color: #F4F4FD;
-}
-ter*/
 
 /*footer*/
 
