--- a/css/styles.css
+++ b/css/styles.css
@@ -620,7 +620,7 @@ img {
 
 .customers{
     /* padding-top: 120px; */
-    padding-bottom: 120px;
+    
 }
 
 .customers-title{
@@ -872,17 +872,30 @@ transform: translateY(0%);
 
 .footer {
     background: #2E2F42;
-    padding: 100px 0;
+    padding-top: 100px;
+    padding-bottom: 96px;
 }
 
+@media only screen and (min-width: 1158px) {
+   .footer{
+    padding: 100px 0;
+    
+  }
+}
+
+
+
 .logo-web-footer {
+    margin-right: 0;
+    margin-left: 0;
+    
     display: inline-block;
     margin-bottom: 16px;
     font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -890,22 +903,72 @@ transform: translateY(0%);
 }
 
 .footer-container{
+    text-align: center;
+    /* display: flex;*/
+    align-items: baseline;   
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+   .footer-container{
+    padding-left: 108px;
+    
+  }
+}
+
+@media only screen and (min-width: 768px) {
+   .footer-container{
     display: flex;
-    align-items: baseline;    
+    flex-wrap: wrap;
+    text-align: left;
+    
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+   .content-footer{
+       margin-right: 120px; 
+
+    }
 
 }
 
-.content-footer{
-    margin-right: 120px;
-
-}
 .footer-text {
+    margin: 0 auto;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
     max-width: 264px;
+    padding-bottom: 72px;
+}
+
+@media only screen and (min-width: 1158px) {
+   .footer-text{
+    padding-bottom: 0;
+    
+  }
+}
+
+.social-media-container{
+    padding-bottom: 72px;
+}
+
+@media only screen and (min-width: 768px) {
+   .social-media-container{
+     margin-left: 24px;
+     margin-top: 0;
+    
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+   .social-media-container{
+    margin-right: 80px;
+    margin-left: 0;
+    
+  }
 }
 
 .social-media-text{
@@ -921,7 +984,10 @@ transform: translateY(0%);
 .social-media-list{
     display: flex;
     gap: 16px;
+    justify-content: center;
 }
+
+
 
 .social-media-item{
     width: 40px;
@@ -950,12 +1016,24 @@ transform: translateY(0%);
 
 
 .form-container{
-    margin-left: 80px;
+   
+    /* margin-left: 80px; */
 }
 
+
+
 .email-form{
-    display: flex;
-    gap: 24px;   
+    display: flex; 
+    gap: 16px; 
+    flex-direction: column;  
+}
+
+@media only screen and (min-width: 768px) {
+   .email-form{
+    flex-direction: row;
+    gap: 24px;
+    
+  }
 }
 
 .form-title{
@@ -968,23 +1046,30 @@ transform: translateY(0%);
 }
 
 .label-form{
+    margin: 0 auto;
 
 }
 
 .input-footer{
     padding-left: 16px;
-    
     font-size: 12px;
     font-family: Roboto;
     letter-spacing: 0.48px;
     line-height: 1.5;
-    width: 264px;
+    width: 398px; 
     height: 40px;
     background-color: transparent;
     border-radius: 4px;
     border: 1px solid  #FFF;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     color: white;
+}
+
+@media only screen and (min-width: 768px) {
+   .input-footer{
+    width:  264px;
+    
+  }
 }
 
 .input-footer::placeholder{
@@ -1009,8 +1094,10 @@ transform: translateY(0%);
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.64px;
-    min-width: 165px;
-    height: 40px;    
+    /* min-width: 165px; */
+    width: 165px;
+    height: 40px;
+    margin: 0 auto;    
 }
 
 .svg-footer{
