--- a/css/styles.css
+++ b/css/styles.css
@@ -114,26 +114,98 @@ img {
 
 
 /*mobile menu*/
+
+
+.menu-toggle-icon{
+    stroke: #2E2F42;
+    background-color: #fff;
+}
+
 .menu-toggle {
-    width: 32px;
-    height: 22px;
-    border-radius: 50%;
+    min-height: 24px;
+    min-width: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    margin: 0;
     padding: 0;
-    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid var(--border-color);
+    border-radius: 50%;
     outline: none;
-    border: 1px solid #E7E9FC;
-    background-color: #fff;
-
 }
-.menu-toggle-icon{
-    stroke: #2E2F42;
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: white;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.mobile-menu {
+    width: fit-content;
+    margin-bottom: auto;
     
-
 }
 
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    
+    text-decoration: none;
+}
+
+.mobile-item:not(:last-child){
+    margin-bottom: 40px;
+     
+    
+}
+
+ .mobile-link{
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+} 
+@media only screen and (max-width: 767px) {
+   .active-mobile{
+    color: var(--accent-cl);
+    
+  }
+}
 /*header*/
 
 .header {
@@ -164,6 +236,7 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 120px;
     color: var(--accent-cl);
     /* margin-right: 76px; */
     display: inline-block;
