--- a/css/styles.css
+++ b/css/styles.css
@@ -149,18 +149,25 @@ img {
 }
 
 .menu-container {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    padding: 32px;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    padding: 80px 56px 40px 40px;
+    background-color: var(--inner-color);
     z-index: 999;
-
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
-}
+    background-color: white;
+    }
+
+
+
 
 .menu-container.is-open {
     transform: translateX(0);
@@ -205,6 +212,40 @@ img {
     color: var(--accent-cl);
     
   }
+}
+
+.mobile-address{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 48px;
+    margin-top: auto;
+
+}
+
+.tel-link{
+    color: var(--accent-cl);
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.email-link{
+    color:  #434455;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
+}
+
+.social-list-mobile{
+    display: flex;
+    gap: 56px;
+    padding-top: 8px;
 }
 /*header*/
 
