--- a/css/styles.css
+++ b/css/styles.css
@@ -240,11 +240,10 @@ img {
 
 @media only screen and (min-width: 428px) {
    .social-list-mobile{
-    gap: 56px;
-    
-  }
+     gap: 56px;
+    }
 }
-@media only screen and (max-width: 448px) and {
+@media only screen and (max-width: 448px) {
     .tel-link {
         font-size: 20px;
     }
@@ -526,8 +525,8 @@ img {
   }
 
   @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx){
+   (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
     .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.70),
         rgba(46, 47, 66, 0.70)),
@@ -545,9 +544,9 @@ img {
 
 
 
-.hero-container{
-    
-}
+  /* .hero-container{
+            
+  } */
 
 .hero-title {
     font-weight: 700;
@@ -957,12 +956,12 @@ img {
 
 
 
-.customers-item{
+/* .customers-item{
     
    
     /* width: calc((100% - 120px) / 6);
-    height: 88px; */
-}
+    height: 88px; 
+} */
 
 .customers-link{
     width: 168px;
@@ -995,23 +994,66 @@ img {
 /*section portfolio*/
 
 .section-portfolo {
-    padding-top: 96px;
-    padding-bottom: 120px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+   
+}
+
+@media only screen and (min-width: 768px) {
+   .section-portfolo{
+    padding-top: 0;
+    padding-bottom: 96px;    
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+   .section-portfolo{
+     padding-top: 96px;
+     padding-bottom: 120px; 
+    }
 }
 
 
 
 .filters {
     display: flex;
-    gap: 24px;
-    justify-content: center;
-    margin-bottom: 72px;
+    gap: 16px;
+    flex-wrap: wrap;
+    
+    
 }
 
+@media (min-width: 428px) and (max-width: 767px) {
+   .filters{
+    margin-bottom: 72px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1157px) {
+   .filters{
+    gap: 24px;
+    justify-content: center;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    
+  }
+}
+@media only screen and (min-width: 1158px) {
+   .filters{
+     margin-bottom: 72px; 
+     gap: 24px; 
+     justify-content: center;
+    }
+}
+
+
+
 .button-item{
+    background-color: #F4F4FD;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+ 
 
 .button-item:hover,
 .button-item:focus{
@@ -1053,21 +1095,88 @@ img {
             0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
+.active-btn {
+    background-color: var(--accent-cl);
+    color: var(--main-white-cl);
+}
+
 
 /*section portfolio product cards*/
 
 .product-card {
     display: flex;
+    /* justify-content: center; */
+    gap: 48px;
+    align-items: center;
+    margin: 0 auto;
+    /* flex-wrap: wrap;
+    column-gap: 24px; 
+    row-gap: 48px; */
+}
+
+
+
+@media (min-width: 428px) and (max-width: 767px) {
+   .foto-card{
+    width: 396px;    
+  }
+
+  .product-card{
+    flex-direction: column;
+  }
+}
+
+@media(min-width: 768px) and (max-width: 1157px) {
+   .product-card{
+      flex-wrap: wrap;
+      column-gap: 24px;
+      margin: 0 auto;
+      row-gap: 72px;    
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+   .product-card{
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    
+  }
 }
 
+@media (min-width: 768px) and (max-width: 1157px){
+   .foto-card{
+    width: 100%;
+    
+  }
+}
+
+
 .product-item{
-    width: calc((100% - 48px) / 3);
+    
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
+    width: 100%;
+}
+
+ @media only screen and (min-width: 768px) {
+   .product-item{
+    width: calc((100% - 72px) / 2);
+    
+    
+  }
+  .product-item:not(:last-child){
+    margin: 0 auto;
+
+  }
+} 
+
+@media only screen and (min-width: 1158px) {
+   .product-item{
+    width: calc((100% - 48px) / 3);
+    
+  }
 }
 
 .product-item:hover {
@@ -1262,9 +1371,9 @@ transform: translateY(0%);
   }
 }
 
-.social-media-container{
-    /* padding-bottom: 72px; */
-}
+/* .social-media-container{
+     padding-bottom: 72px; 
+} */
 
 @media (min-width: 320px) and (max-width: 767px){
     .social-media-container{
@@ -1340,10 +1449,10 @@ transform: translateY(0%);
 }
 
 
-.form-container{
+/* .form-container{
    
-    /* margin-left: 80px; */
-}
+     margin-left: 80px; 
+} */
 
 
 
